# open-tulid

./: README.md  build.sh  install.sh  pyproject.toml
docs/: domain-cli-integration-spec.md  spec_review.md
src/open_tulid/: config.py  models.py
src/open_tulid/cli/: init.py  main.py  uninstall.py
src/open_tulid/domain/: __init__.py  readers.py  schema.py  templates.py  transitions.py  validation.py  writers.py
src/open_tulid/vault/: domain_integration.py  links.py  project.py  validator.py
tests/: test_project_create.py  test_vault_validate.py
tests/domain/: test_artifact_validation.py  test_readers.py  test_schema_objects.py  test_template_validation.py  test_transition_validation.py  test_writers.py
