[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-tulid"
version = "0.1.0"
description = "CLI tool for managing Obsidian vault projects"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
tulid = "open_tulid.cli.main:app"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
